force-app/main/default/objects/Application__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>Branch Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>