force-app/main/default/objects/Application__c/fields/CountyName__c.field-meta.xml
<CustomField>
    <fullName>CountyName__c</fullName>
    <description>Name of the eligible county</description>
    <label>County Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>