force-app/main/default/objects/Application__c/fields/CountyZipCode__c.field-meta.xml
<CustomField>
    <fullName>CountyZipCode__c</fullName>
    <description>To store county zip code value.</description>
    <label>County Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>