force-app/main/default/objects/Application__c/fields/CreatedChannel__c.field-meta.xml
<CustomField>
    <fullName>CreatedChannel__c</fullName>
    <description>Created Channel</description>
    <label>Created Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>