force-app/main/default/objects/Application__c/fields/ExternalApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ExternalApplicationStatus__c</fullName>
    <description>To store External Application Status</description>
    <label>LOS Application Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>