force-app/main/default/objects/Application__c/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <description>Flow Type where application is reached</description>
    <inlineHelpText>Flow Type where application is reached</inlineHelpText>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowType</valueSetName>
    </valueSet>
</CustomField>