force-app/main/default/objects/Application__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <description>Device IP Address</description>
    <label>IP Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>