force-app/main/default/objects/Application__c/fields/IsCountyEligible__c.field-meta.xml
<CustomField>
    <fullName>IsCountyEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if county is eligible</description>
    <label>IsCountyEligible</label>
    <type>Checkbox</type>
</CustomField>