force-app/main/default/objects/Application__c/fields/IsExistingCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsExistingCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Existing customer Flow</description>
    <label>Is Existing Customer Flow</label>
    <type>Checkbox</type>
</CustomField>