force-app/main/default/objects/Application__c/fields/isMemberFlow__c.field-meta.xml
<CustomField>
    <fullName>isMemberFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a flow is started by a Member</description>
    <label>isMemberFlow</label>
    <type>Checkbox</type>
</CustomField>