force-app/main/default/objects/Application__c/fields/KYCStatus__c.field-meta.xml
<CustomField>
    <fullName>KYCStatus__c</fullName>
    <description>KYC verification status</description>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KYCStatus</valueSetName>
    </valueSet>
</CustomField>