force-app/main/default/objects/Application__c/fields/LeadScore__c.field-meta.xml
<CustomField>
    <fullName>LeadScore__c</fullName>
    <description>calculated lead Score for the entire application</description>
    <label>Lead Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>