force-app/main/default/objects/Application__c/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <description>MemberNumber</description>
    <label>Member Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>