force-app/main/default/objects/Application__c/fields/ParentApplication__c.field-meta.xml
<CustomField>
    <fullName>ParentApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connected Application</description>
    <label>Parent Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Child Applications</relationshipLabel>
    <relationshipName>ChildApplications</relationshipName>
    <type>Lookup</type>
</CustomField>