force-app/main/default/objects/Application__c/fields/SessionToken__c.field-meta.xml
<CustomField>
    <fullName>SessionToken__c</fullName>
    <description>SessionToken</description>
    <label>Session Token</label>
    <type>TextArea</type>
</CustomField>