force-app/main/default/objects/Application__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source from which application is started.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Additional Product</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>