force-app/main/default/objects/Application__c/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <description>Name of the eligible State</description>
    <label>State Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>