force-app/main/default/objects/Application__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <description>Date when the application was finally submitted</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>