force-app/main/default/objects/Application__c/fields/UiRouting__c.field-meta.xml
<CustomField>
    <fullName>UiRouting__c</fullName>
    <description>Routing Json of UI</description>
    <label>UiRouting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UiRoutingNames</valueSetName>
    </valueSet>
</CustomField>