force-app/main/default/objects/Application__c/listViews/Abandoned.listView-meta.xml
<ListView>
    <fullName>Abandoned</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>KYCStatus__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Abandoned</value>
    </filters>
    <label>Abandoned</label>
</ListView>