force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CreatedChannel__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>FlowState__c</columns>
    <columns>IsCountyEligible__c</columns>
    <columns>isMemberFlow__c</columns>
    <columns>BranchName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>