force-app/main/default/objects/Application__c/listViews/Branch.listView-meta.xml
<ListView>
    <fullName>Branch</fullName>
    <columns>NAME</columns>
    <columns>ApplicationType__c</columns>
    <columns>BranchName__c</columns>
    <columns>BranchCode__c</columns>
    <columns>Status__c</columns>
    <columns>LeadScore__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FlowState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedChannel__c</field>
        <operation>equals</operation>
        <value>Branch</value>
    </filters>
    <label>Branch</label>
</ListView>