force-app/main/default/objects/Application__c/listViews/RevisionInProgress.listView-meta.xml
<ListView>
    <fullName>RevisionInProgress</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>KYCStatus__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submit for Review</value>
    </filters>
    <label>Revision In Progress</label>
</ListView>