force-app/main/default/objects/Application__c/listViews/Virtual.listView-meta.xml
<ListView>
    <fullName>Virtual</fullName>
    <columns>NAME</columns>
    <columns>ApplicationType__c</columns>
    <columns>Status__c</columns>
    <columns>LeadScore__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FlowState__c</columns>
    <columns>IsCountyEligible__c</columns>
    <columns>IsExistingCustomer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedChannel__c</field>
        <operation>equals</operation>
        <value>Virtual</value>
    </filters>
    <label>Virtual</label>
</ListView>